[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linum-v2"
version = "1.0.0"
description = "Text-to-Video Generation with Linum V2"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Linum AI", email = "hello@linum.ai"}]
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core ML (PyTorch 2.7.1 with CUDA 12.8)
    "torch==2.7.1",
    "torchvision>=0.22.0",
    "triton==3.5.0",  # Required: torch 2.7.1's bundled triton is incompatible

    # HuggingFace ecosystem
    "diffusers==0.34.0",
    "transformers==4.53.2",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "sentencepiece==0.2.0",
    "protobuf>=3.20.0",

    # Tensor operations
    "einops==0.8.1",
    "numpy==2.1.1",

    # Video I/O
    "av>=14.4.0",

    # Utilities
    "tqdm",
    "packaging>=25.0",

    # Flash Attention 3 build dependencies (optional, Hopper GPUs only)
    "ninja",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[tool.uv]
override-dependencies = ["triton==3.5.0"]
